--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,8 @@
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
+            <artifactId>junit-jupiter</artifactId>
             <version>${junit.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -49,6 +48,11 @@
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-api</artifactId>
             <version>4.16.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
         </dependency>
     </dependencies>
 
@@ -61,11 +65,7 @@
                 <configuration>
                     <systemProperties>
                         <browser.name>chrome</browser.name>
-                        <fullscreen.url>https://otus.ru</fullscreen.url>
-                        <kiosk.url>
-                            https://demo.w3layouts.com/demos_new/template_demo/03-10-2020/photoflash-liberty-demo_Free/685659620/web/index.html?_ga=2.181802926.889871791.1632394818-2083132868.1632394818
-                        </kiosk.url>
-                        <headless.url>https://duckduckgo.com/</headless.url>
+                        <base.url>https://otus.ru</base.url>
                     </systemProperties>
                 </configuration>
             </plugin>
